--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -62,5 +62,6 @@ pbl-dtb-$(CONFIG_MACH_UDOO) += imx6q-udoo.dtb.o
 pbl-dtb-$(CONFIG_MACH_USI_TOPKICK) += kirkwood-topkick-bb.dtb.o
 pbl-dtb-$(CONFIG_MACH_VARISCITE_MX6) += imx6q-var-custom.dtb.o
 pbl-dtb-$(CONFIG_MACH_SECO_MX6_UQ7) += imx6dl-seco-uq7.dtb.o
+pbl-dtb-$(CONFIG_MACH_SECO_MX6_UQ7_962) += imx6q-seco-uq7-962.dtb.o
 
 clean-files := *.dtb *.dtb.S .*.dtc .*.pre .*.dts
