--- a/arch/arm/mach-imx/Kconfig
+++ b/arch/arm/mach-imx/Kconfig
@@ -358,6 +358,10 @@ config MACH_SECO_MX6_UQ7
 	bool "SECO i.MX6 uQ7-J-A75"
 	select ARCH_IMX6
 
+config MACH_SECO_MX6_UQ7_962
+	bool "SECO i.MX6 uQ7-962"
+	select ARCH_IMX6
+
 endif
 
 # ----------------------------------------------------------
