uq7-962: send strobe on boot validation pin at startup
uQ7-962 boards feature an embedded controller IC which expects
a 1ms strobe on one of its pins to confirm that the board booted
correctly. In the event the strobe is not received, it will reset
the board and boot from the next available boot source.

--- a/arch/arm/dts/imx6q-seco-uq7-962.dts
+++ b/arch/arm/dts/imx6q-seco-uq7-962.dts
@@ -43,6 +43,13 @@
 	pinctrl-names = "default";
 
 	imx6dl-seco-uq7 {
+		pinctrl_hog: hoggrp {
+			fsl,pins = <
+				/* BOOT validate */
+				MX6QDL_PAD_NANDF_D4__GPIO2_IO04		0x80000000
+			>;
+		};
+
 		pinctrl_uart2: uart2grp {
 			fsl,pins = <
 				MX6QDL_PAD_EIM_D26__UART2_TX_DATA	0x1b0b1
