--- a/arch/arm/dts/imx6q-seco-uq7-962.dts
+++ b/arch/arm/dts/imx6q-seco-uq7-962.dts
@@ -90,19 +90,26 @@
 
 		pinctrl_enet: enetgrp {
 			fsl,pins = <
-				MX6QDL_PAD_ENET_RXD0__ENET_RX_DATA0	0x1b0b0
-				MX6QDL_PAD_ENET_RXD1__ENET_RX_DATA1	0x1b0b0
-				MX6QDL_PAD_ENET_TX_EN__ENET_TX_EN	0x1b0b0
-				MX6QDL_PAD_ENET_TXD0__ENET_TX_DATA0	0x1b0b0
-				MX6QDL_PAD_ENET_TXD1__ENET_TX_DATA1	0x1b0b0
-				MX6QDL_PAD_ENET_MDC__ENET_MDC		0x1b0b0
-				MX6QDL_PAD_ENET_MDIO__ENET_MDIO		0x1b0b0
-				MX6QDL_PAD_GPIO_3__GPIO1_IO03		0x1f071
-				MX6QDL_PAD_GPIO_2__GPIO1_IO02		0x1f071
-				MX6QDL_PAD_ENET_RX_ER__ENET_RX_ER	0x1b0b0
-				MX6QDL_PAD_GPIO_16__ENET_REF_CLK	0x1b0b0
-				MX6QDL_PAD_ENET_CRS_DV__ENET_RX_EN	0x1b0b0
-				MX6QDL_PAD_ENET_REF_CLK__GPIO1_IO23	0x1b0b0
+				MX6QDL_PAD_ENET_MDIO__ENET_MDIO              0x1b0b0
+				MX6QDL_PAD_ENET_MDC__ENET_MDC                0x1b0b0
+				MX6QDL_PAD_RGMII_RD0__RGMII_RD0              0x1b0b0
+				MX6QDL_PAD_RGMII_RD1__RGMII_RD1              0x1b0b0
+				MX6QDL_PAD_RGMII_RD2__RGMII_RD2              0x1b0b0
+				MX6QDL_PAD_RGMII_RD3__RGMII_RD3              0x1b0b0
+				MX6QDL_PAD_RGMII_RX_CTL__RGMII_RX_CTL        0x1b0b0
+				MX6QDL_PAD_RGMII_TD0__RGMII_TD0              0x1b0b0
+				MX6QDL_PAD_RGMII_TD1__RGMII_TD1              0x1b0b0
+				MX6QDL_PAD_RGMII_TD2__RGMII_TD2              0x1b0b0
+				MX6QDL_PAD_RGMII_TD3__RGMII_TD3              0x1b0b0
+				MX6QDL_PAD_RGMII_TX_CTL__RGMII_TX_CTL        0x1b0b0
+				MX6QDL_PAD_RGMII_RXC__RGMII_RXC              0x1b0b0
+				MX6QDL_PAD_RGMII_TXC__RGMII_TXC              0x1b0b0
+				MX6QDL_PAD_ENET_REF_CLK__ENET_TX_CLK         0x1b0b0
+
+				/* ENET RESET */
+				MX6QDL_PAD_EIM_D23__GPIO3_IO23               0x1f071
+				/* ENET CLK125_EN */
+				MX6QDL_PAD_RGMII_RX_CTL__GPIO6_IO24             0x1f071
 			>;
 		};
 	};
@@ -111,9 +118,9 @@
 &fec {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_enet>;
-	phy-mode = "rmii";
-	phy-reset-gpios = <&gpio1 3 0>;
-	phy-reset-duration = <20>;
+	phy-mode = "rgmii";
+	phy-reset-gpios = <&gpio3 23 0>;
+	phy-reset-duration = <10>;
 	fsl,magic-packet;
 	status = "okay";
 };
