uq7-962: fix ethernet not working
- Add required fixups for PHY KSZ9031
- Enable DMA engine (required by FEC driver)

--- a/arch/arm/configs/seco_mx6_uq7_962_defconfig
+++ b/arch/arm/configs/seco_mx6_uq7_962_defconfig
@@ -101,6 +101,8 @@ CONFIG_LED=y
 CONFIG_LED_GPIO=y
 CONFIG_LED_TRIGGERS=y
 CONFIG_EEPROM_AT24=y
+CONFIG_MXS_APBH_DMA=y
+CONFIG_GENERIC_PHY=y
 CONFIG_FS_EXT4=y
 CONFIG_FS_TFTP=y
 CONFIG_FS_FAT=y
