--- a/arch/arm/configs/seco_mx6_uq7_962_defconfig
+++ b/arch/arm/configs/seco_mx6_uq7_962_defconfig
@@ -10,7 +10,7 @@ CONFIG_AEABI=y
 CONFIG_ARM_OPTIMZED_STRING_FUNCTIONS=y
 CONFIG_MMU=y
 CONFIG_TEXT_BASE=0x10000000
-CONFIG_MALLOC_SIZE=0x4000000
+CONFIG_MALLOC_SIZE=0x10000000
 CONFIG_EXPERIMENTAL=y
 CONFIG_MALLOC_TLSF=y
 CONFIG_RELOCATABLE=y
@@ -54,6 +54,7 @@ CONFIG_CMD_LN=y
 CONFIG_CMD_READLINK=y
 CONFIG_CMD_UNCOMPRESS=y
 CONFIG_CMD_GETOPT=y
+CONFIG_CMD_LET=y
 CONFIG_CMD_SLEEP=y
 CONFIG_CMD_DHCP=y
 CONFIG_NET_CMD_IFUP=y
