--- a/arch/arm/configs/develer_develboard_defconfig
+++ b/arch/arm/configs/develer_develboard_defconfig
@@ -55,6 +55,7 @@ CONFIG_CMD_LN=y
 CONFIG_CMD_READLINK=y
 CONFIG_CMD_UNCOMPRESS=y
 CONFIG_CMD_GETOPT=y
+CONFIG_CMD_LET=y
 CONFIG_CMD_SLEEP=y
 CONFIG_CMD_DHCP=y
 CONFIG_NET_CMD_IFUP=y
